# fittino

./: ACgrid.cpp  ACgrid.h  AbsoluteUncertainty_8cpp.html  AbsoluteUncertainty_8cpp_source.html  AbsoluteUncertainty_8h.html  AbsoluteUncertainty_8h_source.html  AnalysisTool_8cpp.html  AnalysisTool_8cpp_source.html  AnalysisTool_8h.html  AnalysisTool_8h_source.html  AstroCalculator_8cpp.html  AstroCalculator_8cpp_source.html  AstroCalculator_8h.html  AstroCalculator_8h_source.html  AstroFitCalculator_8cpp.html  AstroFitCalculator_8cpp_source.html  AstroFitCalculator_8h.html  AstroFitCalculator_8h_source.html  AstroUncertainty_8cpp.html  AstroUncertainty_8cpp_source.html  AstroUncertainty_8h.html  AstroUncertainty_8h_source.html  AxionCalculator_8cpp.html  AxionCalculator_8cpp_source.html  AxionCalculator_8h.html  AxionCalculator_8h_source.html  BOL_EW_scale_MSSM_spectrum.cpp  BOL_EW_scale_MSSM_spectrum.h  BOL_EW_scale_NMSSM_spectrum.cpp  BOL_EW_scale_NMSSM_spectrum.h  BOL_EW_scale_SM_spectrum.cpp  BOL_EW_scale_SM_spectrum.h  BOL_EW_scale_spectrum.cpp  BOL_EW_scale_spectrum.h  BOL_particle_decay.cpp  BOL_particle_decay.h  BOL_particle_decay_set_handler.cpp  BOL_particle_decay_set_handler.h  BOL_particle_property_set.cpp  BOL_particle_property_set.h  (+1042 more)
SuperBuild/: Add_CondaPackages.cmake  Add_Miniconda.cmake  Add_PipPackages.cmake  Add_SModelS.cmake  CMakeLists.txt  CondaPackages2_Requirements.txt  Requirements_PipPackages2.txt  activate  config.cmake.in  createSource_MSSMTriLnV.m  init.cmake  install_HiggsBounds.cmake  install_HiggsSignals.cmake  patch_HiggsBounds.cmake  patch_HiggsSignals.cmake  patch_SPheno.cmake  superinit_MSSMTriLnV.cmake
SuperBuild/CMake/: ActivationScript.cmake  FinalizeActivationScript.cmake  InitializeActivationScript.cmake  Options.cmake  Projects.cmake
SuperBuild/Flavio_patch/: flha.py
SuperBuild/MSSMTriLnV/: Boundaries_MSSMTriLnV.f90  BranchingRatios_MSSMTriLnV.f90  CouplingsCT_MSSMTriLnV.f90  CouplingsForDecays_MSSMTriLnV.f90  Couplings_MSSMTriLnV.f90  HiggsCS_MSSMTriLnV.f90  InputOutput_MSSMTriLnV.f90  LoopCouplings_MSSMTriLnV.f90  LoopMasses_MSSMTriLnV.f90  Makefile  Model_Data_MSSMTriLnV.f90  OneLoopDecays_MSSMTriLnV.f90  RGEs_MSSMTriLnV.f90  RunSM_MSSMTriLnV.f90  SPhenoMSSMTriLnV.f90  Settings.f90  TadpoleEquations_MSSMTriLnV.f90  TreeLevelMasses_MSSMTriLnV.f90  TreeLevel_Decays_MSSMTriLnV.f90
SuperBuild/MSSMTriLnV_patch/: InputOutput_MSSMTriLnV.f90  Model_Data_MSSMTriLnV.f90  SPhenoMSSMTriLnV.f90
SuperBuild/Requirements/: CondaPackages2.txt  CondaPackages2_Linux.txt  CondaPackages3.txt  CondaPackages3_Linux.txt  PipPackages2.txt  PipPackages3.txt  PipPackages3_Flavio-0.24.txt
SuperBuild/SCYNet/: setup.py
SuperBuild/SCYNet2/: setup.py
SuperBuild/SPhenoMSSMTriLnV/: Boundaries_MSSMTriLnV.f90  BranchingRatios_MSSMTriLnV.f90  CouplingsForDecays_MSSMTriLnV.f90  Couplings_MSSMTriLnV.f90  HiggsCS_MSSMTriLnV.f90  InputOutput_MSSMTriLnV.f90  LoopCouplings_MSSMTriLnV.f90  LoopMasses_MSSMTriLnV.f90  Makefile  Model_Data_MSSMTriLnV.f90  RGEs_MSSMTriLnV.f90  RunSM_MSSMTriLnV.f90  SPhenoMSSMTriLnV.f90  Settings.f90  TadpoleEquations_MSSMTriLnV.f90  TreeLevelMasses_MSSMTriLnV.f90  TreeLevel_Decays_MSSMTriLnV.f90
SuperBuild/SPheno_patch/: Control.F90
data/: CMakeLists.txt  total_results.txt
data/HEPData-ins1599846-v1-csv/: Table1.csv  Table2.csv
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile_new  Input.md  StyleGuide.dox
doc/html/: footer.html
doc/images/: Brinvisible.gnu  brinvisible.txt  hgaga.txt  hgg.txt  linearfit.gnu
input/: CMakeLists.txt  ConfigurationOptions.txt  Example.CMSSMModel.Plotting.in.xml  Example.CMSSMModel.Sampling.in.xml  Example.CorrelatedSampler.in.xml  Example.CovarianceMatrix.in.xml  Example.CovariantSampler.in.xml  Example.GeneticAlgorithm.in.xml  Example.GeneticAlgorithmOptimizer.in.xml  Example.HDim6Model.Sampling.in.xml  Example.HEC.Sampling.in.xml  Example.HECModel.Sampling.in.xml  Example.MSUGRA.Sampling.in.xml  Example.MSUGRAModel.Sampling.in.xml  Example.MarkovChainSampler.in.xml  Example.Optimization-new.in.xml  Example.Optimization.in.xml  Example.Rosenbrock.GeneticAlgorithm.in.xml  Example.Rosenbrock.MarkovChain.in.xml  Example.Rosenbrock.Simple.in.xml  Example.RosenbrockModel.MarkovChainSampler.in.xml  Example.RosenbrockModel.SimpleSampler.in.xml  Example.SPheno.MSSM11.in.xml  Example.SPheno.in.xml  Example.Sampling.in.xml  Example.SimpleSampler.in.xml  Example.Toys.in.xml  Example.Tree.ContourHistogramMaker.in.xml  Example.Tree.CovarianceMatrix.in.xml  Example.Tree.ProfileHistogramMaker.in.xml  Example.Tree.Simple1DHistogramMaker.in.xml  Example.Tree.SimpleOptimizer.in.xml  Example.Tree.SummaryHistogramMaker.in.xml  Example.Tree.Toys.in.xml  Example.TreeSampler.in.xml  Example.in.xml  Example.optimization.in.xml  Example.sampling.in.xml  GeneticAlgorithm.in.xml  InputFile-new.dtd  (+23 more)
input/MSSM11/: MSSM11.LEO.in.xml
input/definitions/: Calculators.xsd  CovarianceMatrices.xsd  FeynHiggsCalculator.xsd  InputFile.dtd  InputFile.xsd  Model.xsd  ModelBase.xsd  ModelParameter.xsd  Observables.xsd  PhysicsModel.xsd  RandomSeed.xsd  RosenbrockModel.xsd  Tool.xsd  VerbosityLevel.xsd
input/scripts/: MSSMTriLnV_Raw.xml  configureInput.cmake  createMSSMTriLnVfiles.py
input/steering/: Axion.xml  Example.HDim6Model.Sampling.in.xml  Example.Rosenbrock.MarkovChain.in.xml  Example.Rosenbrock.Simple.in.xml  Example.SPheno.in.xml  Example.Tree.CovarianceMatrix.in.xml  Example.Tree.ProfileHistogramMaker.in.xml  Example.Tree.SimpleOptimizer.in.xml  Example.Tree.SummaryHistogramMaker.in.xml  Example.Tree.Toys.in.xml  MSSMTriLnV_Decoupling_01.xml  MSSMTriLnV_Decoupling_10.xml  MSSMTriLnV_RD.xml  MSSMTriLnV_RD_313.xml  MSSMTriLnV_RD_323.xml  MSSMTriLnV_RD_333.xml  MSSMTriLnV_RK_stop.xml  MSSMTriLnV_RK_stop_233.xml  MSSMTriLnV_gRatios.xml  MSSMTriLnV_low.xml  RPV.xml  SCYNet.xml  SModelS.in.xml  TestCLs.xml  pMSSM11_LHCsimulation_SCYNet.in.xml
input/style/: InputFile.xsl  Model.xsl  RandomSeed.xsl  Tool.xsl  VerbosityLevel.xsl
kernel/: CMakeLists.txt
kernel/include/: Controller.h
sources/: CMakeLists.txt
(+2447 files in other folders)
